--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,31 +1,16 @@
-input#message {
-    background:#fff;
-    border:none;
-    outline:none;
-    box-shadow:none;
-    font-size:1.6em;
-    font-weight:300;
-    margin-bottom: 3em;
-    padding:1.2em .7em;
+#mFooter {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
 }
-
-#details-container {
-    display:flex;
-    flex-direction: row;
-    flex-wrap:wrap;
-    width:100%;
-}
-
-#details-container p {
-    background:#fff;
-    padding:1.4em;
-    color:#696969;
-    margin: 12px;
-    width:auto;
-    min-width:200px;
-}
-
-img {
-    display:block;
-    margin-bottom:12px;
+#mHeader {
+    height:150px;
+    background:#F0F0F0;
+    border:1px solid #CCC;
+    width:960px;
+    margin:0px auto;
 }
