--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,13 @@
-<div class="form-container">
-    <h2>Custom Login</h2>
+<div class="default-router-container">
+  <h2>Bejelentkezés</h2>
 
-    <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
+  <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
 
-    <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
+  <form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
 
-      <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
-      <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required>
+    <input type="text" placeholder="Email address.." (ngModel)="email" name="email" class="txt" required>
+    <input type="password" placeholder="Password" (ngModel)="password" name="password" class="txt" required>
 
-      <button type="submit" [disabled]="!formData.valid" class="basic-btn">Log in</button>
-      <a routerLink="/signup" class="alc">Don't have an account?</a>
+    <button type="submit" [disabled]="!formData.valid" class="basic-btn">Bejelentkezési adatok küldése</button>
   </form>
 </div>
