--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="mHeader">
-  <h1>Esküvő</h1>
+  <h1 class="title">Csenge és Gergő 2017.07.15.</h1>
     <nav>
       <a routerLink="/home"    routerLinkActive="active">Kezdőlap</a>
       <a routerLink="/joining" routerLinkActive="active">Jelentkezés</a>
