--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color:#EBEBEB;
+    background-image: url('./assets/images/bg-stars.jpg');
     padding-top: 0em;
+    color: darkgreen;
+    text-shadow: 2px 2px #ff0000;
 }
 * {
     font-family: 'Raleway';
