--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,14 +5,17 @@
   bottom: 0;
   left: 0;
   padding: 1rem;
-  background-color: #efefef;
+  background-color: transparent;
   text-align: center;
 }
 #mHeader {
   position: relative;
   height: 150px;
-  background:#F0F0F0;
+  background: transparent;
   /*border:1px solid #CCC;*/
   width: 100%;
   padding: 0px 25px 0px 25px;
+}
+.title {
+  margin-bottom: 20px;
 }
