--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,20 @@
 <div class="default-router-container">
-    <h2>Meghívó?</h2>
+    <pre>
+    ,,A játszótársam, mondd, akarsz-e lenni,
+      akarsz-e mindíg, mindíg játszani…
+      Akarsz-e élni, élni mindörökkön,
+      játékban élni, mely valóra vált?”
+ 
+                         Kosztolányi Dezső
+    </pre>
+    <h3>Információk</h3>
+    <p>Nagy örömmel és szeretettel hívunk nászmisés esküvőnkre, melyet 2017. július-15-én 15 órakor a Szent Imre templomban tartunk!</p>
+    <pre>
+        Szertartás:  1114 Budapest, Villányi út 25.
+        Lakodalom: Herman Ottó Inézet 1223  Budapest, Park u. 2.
+        Kérjük, részvételi szándékodat július 30-ig jelezd vissza az itt.
+        Kérdéseiddel nyugodtan keresd Varga Esztert: +36-30-287-9718
+    </pre>
+    <br>
+    <p>Az esküvővel vagy lakodalommal kapcsolatos esetleges programjavaslatokkal, ötletekkel vőfélyünkhöz, dr. Kocsis Koppányhoz lehet fordulni e-mailben: koppany.kocsis@gmail.com vagy telefonon: 06-70-682-1796. </p>
 </div>
