--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,8 @@
     <pre>
         Szertartás:  1114 Budapest, Villányi út 25.
         Lakodalom: Herman Ottó Inézet 1223  Budapest, Park u. 2.
-        Kérjük, részvételi szándékodat július 30-ig jelezd vissza az itt.
+        Parkolási lehetőség a közeli Campona-nál.
+        Kérjük, részvételi szándékodat június 30-ig jelezd vissza itt.
         Kérdéseiddel nyugodtan keresd Varga Esztert: +36-30-287-9718
     </pre>
     <br>
